# timeseries-forecasting-workshop

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/workflows/: ci.yml
data/: air_quality_processed.csv  airline_passengers.parquet  online_retail.csv  store_retail.csv  store_retail_metadata.csv  sunspots.csv  sunspots.parquet
notebooks/: 01-introduction.ipynb  01_introduction.ipynb  02-air-pollutants-analysis.ipynb  02-air-pollutants.ipynb  03-air-pollutants-feature-engineering.ipynb  03-air-pollutants-forecasting.ipynb  04-air-pollutants-forecasting.ipynb  05-online-retail-challenge.ipynb  06-untitled.ipynb  07-multi-step-ahead-forecasting.ipynb  08-final-challenge.ipynb  09-summary.ipynb
src/timeseries/: data.py  estimators.py  preprocessing.py  transformers.py  utils.py
tests/timeseries/: test_estimators.py  test_transformers.py  test_utils.py
timeseries/: estimators.py
