[tool.poetry]
authors = ["Malte Weinberg <malte.weinberg@kuehne-nagel.com>"]
description = "Time series forecasting workshop"
name = "timeseries"
packages = [{include = "timeseries", from="."}]
version = "0.0.1"

[tool.poetry.urls]
"Datascience Team" = "https://github.com/WeinbergMalte/timeseries-forecasting-workshop"

[tool.poetry.dependencies]
lightgbm = "^3.3.3"
pandas = "^2.0"
python = "^3.9.16,<3.11"
scikit-learn = "^1.0"
seaborn = "^0.12.2"

[tool.poetry.scripts]
airpricingetl = "timeseries.cli:app"

[tool.poetry.group.dev.dependencies]
pylint = "^2.10.2"
pytest = "^7.0.1"
black = ">=22.12.0"
mypy = "^0.991"
isort = "^5.12.0"

[tool.pytest]
addopts = "-ra --black"
junit_logging = "all"
log_file_level = "debug"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Call to deprecated create function FieldDescriptor",
  "ignore:Call to deprecated create function Descriptor",
  "ignore:Call to deprecated create function EnumDescriptor",
  "ignore:Call to deprecated create function EnumValueDescriptor",
  "ignore:Call to deprecated create function FileDescriptor",
  "ignore:Call to deprecated create function OneofDescriptor",
  "ignore:.*:DeprecationWarning",
  "ignore:.*:FutureWarning",
]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
include_trailing_comma = 'True'
known_pytest = ['pytest']
line_length = 88
multi_line_output = 3
profile = "black"
sections = ['FUTURE', 'PYTEST', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
