[project]
name = "timeseries"
version = "0.0.1"
description = "Time series forecasting workshop"
authors = [
    {name = "Malte Weinberg", email = "maltexweinberg@gmail.com"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "lightgbm>=3.3.3",
    "pandas>=1.5.3",
    "scikit-learn>=1.0",
    "seaborn>=0.12.2",
    "sktime>=0.18.0",
    "pyarrow>=12.0.0",
    "fastparquet>=2023.4.0",
    "feature-engine>=1.8.0",
    "skforecast>=0.7.0",
    "prophet>=1.1.4",
    "jupyter>=1.0.0",
    "jupyterlab>=3.6.3",
    "ipykernel>=6.22.0",
    "pylint>=2.10.2",
    "pytest>=7.0.1",
    "ruff>=0.1.0",
    "mypy>=0.991",
    "xgboost>=3.0.2",
]

[tool.pytest]
addopts = "-ra --black"
junit_logging = "all"
log_file_level = "debug"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Call to deprecated create function FieldDescriptor",
  "ignore:Call to deprecated create function Descriptor",
  "ignore:Call to deprecated create function EnumDescriptor",
  "ignore:Call to deprecated create function EnumValueDescriptor",
  "ignore:Call to deprecated create function FileDescriptor",
  "ignore:Call to deprecated create function OneofDescriptor",
  "ignore:.*:DeprecationWarning",
  "ignore:.*:FutureWarning",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["timeseries"]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.hatch.build.targets.wheel]
packages = ["src/timeseries"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
